one row solution added to AOC2, 2020